The great work
-Added database basic script create-db.sql (for creating production postgres roles and
database, the rest is taken care of by Hibernate),
-Configured separate databases for integration testing and production in
one build (see antrun goals in ejb project ant both versions of
glassfish-resources.xml and persistence.xml files),
-Great refactoring (class names, package names, web ApplicationController
classes moved to web project etc.),
-Established glassfish-embedded environment for integration testing (took
me ages to do but finally it works, see test sources in ejb)
-Some more